# newsletter-server

./: .env  Cargo.toml  Dockerfile  README.md
.sqlx/: query-00e4ce643b57ae2a95d82c49a1262620685b03084bf0a48756f7d159f2849659.json  query-2854cda2408531479e3478c03e1bfa5ac9be0389af6caa02bf870c5b5d0e3d64.json  query-35481ca7e04d60bb63a1f30735b7f0da6e1a0604d48025dc948424c06f23ad10.json  query-474258317b64645d74e4dcfe016af8fc29a4955adb257b90d600a688448182ff.json  query-52d90895ab3f19d5cb626f85f02f502c80b92d8fde5d7281006813ab6adf860e.json  query-596d2de847d95c3555c4b2d104d2541abff74ef0ed5841227b3ae741d3364d54.json  query-63774f5c1f4de30e08e0080bae3e9af5c490ca9971528fdcefa527fc8fa82cd6.json  query-6609624df3269c8f8e332fcd6974f53be341af1d8fde9be7fcb61ecd2f0e812c.json  query-98e5d5e40abc0475c42a4f916a7acd7030c285f308465d87c927c248ddc1f2a2.json  query-a4a880cdf537c2370e195041d977357ee1fe26237a98d16a8fe6cad008e4279c.json  query-cabef322f9431ea37ae598b7e1bb23efd9695e07a10b4c3f11db7f838272b506.json  query-d41976e0d5d535c1df1164aa929c55749087d781ed53188f07b36bdf9db177c0.json  query-e0cd4ddef459023636a9705c3b92899f49499d87ca9351db833cc6bc27d1633b.json  query-eae05d4a796aac6cb5a2567ca488609c3f52ae9fc58b49a2e90710895722dc80.json
configuration/: base.toml  development.toml  production.toml
migrations/: 0001_create_subscriptions_table.sql  0003_make_status_not_null_in_subscriptions.sql  0004_create_subscription_tokens_table.sql  0005_create_users_table.sql  0006_rename_password_column.sql  0009_seed_user.sql  0010_create_idempotency_table.sql  0011_relax_null_checks_on_idempotency.sql  0012_create_newsletter_issue_table.sql  0013_create_issue_delivery_queue_table.sql  0014_create_index_for_status_in_subscriptions_table.sql  0015_create_b_plus_index_for_created_at_in_idempotency_table.sql
public/: index.html
public/assets/: index-B_UpDU8V.css  index-C7MJyWoV.js  index-CTdPafjo.js  index-DPjajjdT.js  index-DjOpW11u.css  index-DnDLLUA8.js  index-rPePcUlR.css
scripts/: docker-build.sh  frontend-build.sh  imgs-prune.sh  init_db.sh  init_redis.sh
src/: appstate.rs  authentication.rs  configuration.rs  configuration.toml  data.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telementry.rs
src/authentication/: mod.rs  password.rs
src/authentication/middleware/: mod.rs  reject_anonymous_user.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_id.rs  subscriber_name.rs
src/idempotency/: http_headers.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletter.rs  newsletters.rs  not_found.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  password.html  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  mod.rs  post.rs
src/utils/: mod.rs  server.rs
src/workers/: idempotency_purge_worker.rs  mod.rs
tests/: drop.rs  health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
