[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-web = "4.9.0"
axum = { version = "0.8.1", features = ["macros"] }
chrono = "0.4.39"
config = "0.15.6"
hyper = "1.5.2"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.0", features = ["v4"] }


[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "mysql",
  "uuid",
  "chrono",
  "migrate",
]
