[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-server = "0.7.1"
chrono = "0.4.39"
config = "0.15.6"
reqwest = "0.12.12"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-aux = "4.5.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.12.0", features = ["v4"] }
validator = "0.19.0"


[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "mysql",
  "uuid",
  "chrono",
  "migrate",
]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
claim = "0.5.0"
