[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
base64 = "0.22.1"
chrono = "0.4.39"
config = "0.15.6"
hmac = "0.12.1"
htmlescape = "0.3.1"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["full"] }
linkify = "0.10.0"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.135"
sha3 = "0.10.8"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = [
  "macros",
  "rt-multi-thread",
  "rt",
  "signal",
] }
tower = { version = "0.5.2", features = ["filter", "util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "cors"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = [
  "registry",
  "env-filter",
] }
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"
uuid = { version = "1.12.0", features = ["v4"] }
validator = "0.19.0"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "mysql",
  "uuid",
  "chrono",
  "migrate",
]

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["json", "rustls-tls"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
claim = "0.5.0"
fake = "3.1.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
rand_core = "0.6.4"
wiremock = "0.6.2"
